--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       var checkoutDate = new Date(checkoutDateStr);
       
       if (checkoutDate < checkinDate) {
-        alert("Ngày checkout không được trước ngày checkin!");
+        alert("NGU. Ngày checkout không được trước ngày checkin!");
         return;
       }
       
