--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         if (timeVal < 21) {
           checkinMessageElem.innerText = "Bé vô trước 21h tính 1 ngày";
         } else {
-          checkinMessageElem.innerText = "Bé sau 21h tính 1/2 ngày";
+          checkinMessageElem.innerText = "Bé vô từ 21h tính 1/2 ngày";
         }
       } else {
         checkinMessageElem.innerText = "";
@@ -149,7 +149,7 @@
         } else if (timeVal < 21) {
           checkoutMessageElem.innerText = "Bé đón trước 21h tính thêm 1/2 ngày";
         } else {
-          checkoutMessageElem.innerText = "Bé đón sau 21h tính thêm 1 ngày";
+          checkoutMessageElem.innerText = "Bé đón từ 21h tính thêm 1 ngày";
         }
       } else {
         checkoutMessageElem.innerText = "";
