--- a/index.html
+++ b/index.html
@@ -311,9 +311,8 @@
 </head>
 <body>
   <div class="container">
-    <h2>Pet Mobile - Dịch Vụ Thú Cưng Tại Nhà</h2>
-    <h2>Hotline : 0909463601</h2>
-    <h2>Bảng tính số ngày lưu trú cho 1 bé</h2>
+    <h2>Pet Mobile - 0909.463.601</h2>
+    <h2>Tính số ngày ở cho 1 bé</h2>
     <p><strong>Ngày Checkin:</strong> ${checkinDateFormatted}</p>
     <p><strong>Giờ Checkin:</strong> ${checkinTime}</p>
     <p><strong>Thông báo Checkin:</strong> ${checkinMsg}</p>
